# fastapi_studies

./: pyproject.toml
fastapi_studies/: app.py
tests/: test_app.py
